<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/magic_Eight_Ball_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magic_eight_ball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/Training_Days_Calc"
        app:layout_constraintVertical_bias="0.158" />

    <Button
        android:id="@+id/Sleep_Debt_Calc_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep_debt_calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintVertical_bias="0.546" />

    <Button
        android:id="@+id/Rock_Paper_Scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_paper_scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/Training_Days_Calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_days_calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/Kelvin_Calc_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelvin_temperature_calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintVertical_bias="0.688" />
</androidx.constraintlayout.widget.ConstraintLayout>