<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Eight_Ball_Name_Input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EightBall">

    <TextView
        android:id="@+id/Eight_Ball_Proj_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magic_eight_ball_title"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/Eight_Ball_Proj_Desc"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/eight_ball_project_description"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Eight_Ball_Proj_Title"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/Eight_Ball_Name_Input_Section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_here_eight_ball"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <EditText
        android:id="@+id/Eight_Ball_Question_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_question_you_want_to_ask_here"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Eight_Ball_Proj_Desc"
        app:layout_constraintVertical_bias="0.307" />

    <Button
        android:id="@+id/Ask_Question_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight_ball_action_button"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Eight_Ball_Question_Input"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/Eight_Ball_Answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ask_Question_Button"
        app:layout_constraintVertical_bias="0.196" />


</androidx.constraintlayout.widget.ConstraintLayout>